--- a/index.html
+++ b/index.html
@@ -8,24 +8,24 @@
 </head>
 <body>
     <header>
-        <div><img src="./assets/logo.png" alt="logo simply recipes"></div>
+        <div id="logo"><img src="./assets/logo.png" alt="logo simply recipes"></div>
         <p>Part of <strong>A SIMPLY FABULOUS THANKSGIVING</strong></p>
     </header>
     <main>
         <h1>Focaccia with Caramelized Onions, Cranberries, and Brie</h1>
         <p>Wow your taste buds with this festive focaccia appetizer topped with sweet caramelized onions, tart cranberries, and creamy brie. It will Become your new favoeirw holiday starter!</p>
         <div>
-            <video src="./assets/video/focaccia_(720p, h264, youtube).mp4" width="640" height="480" poster="./assets/img/focaccia.png" controls></video>
-            <!-- <img src="./assets/focaccia.png" alt="focaccia recipes"> -->
+            <video src="./assets/video/focaccia_(720p, h264, youtube).mp4" width="1280" height="480" poster="./assets/img/focaccia.png" controls></video>
             <p>Image: Sally Vegas</p>
             <div id="featured">
                 <h3>FEATURED IN:</h3>
-                <p><a href="#">Fresh Cranberry Recipes That Go Beyond Sauce</a></p>
+                <a href="#">Fresh Cranberry Recipes That Go Beyond Sauce</a>
             </div>
         </div>
         <h2>Ingredients</h2>
         <hr>
-        <p><strong>For the focaccia:</strong>
+        <p>
+            <strong>For the focaccia:</strong>
             <ul>
                 <li>4 cups (500g) all-purpose flour</li>
                 <li>1 1/2 teaspoons instant yeast</li>
